--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,9 +1,13 @@
 body{
     padding: 50px;
-    background: blue;
+    background: rgb(32, 32, 148);
 }
 
-body.loader{
-    color: blue !important;
-    margin-top: 20px;
+section h1,p{
+    color: #fff;
+    text-align: center;    
+}
+
+section{
+    padding: 100px;
 }
